--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">iLinkAcademy</string>
+    <string name="bottom_menu_picture_label">Pictures</string>
+    <string name="bottom_menu_favourites_label">Favourites</string>
 </resources>
